# rivaflow

./: .deployment-verify  .env.example  .gitignore  BETA_READINESS_REPORT.md  BETA_READINESS_STATUS.md  CHANGELOG.md  DEPLOYMENT_CHANGES_SUMMARY.md  Dockerfile  FINAL_BETA_STATUS.md  LICENSE  MIGRATION_INSTRUCTIONS.md  OVERNIGHT_DEBUG_REPORT.md  QUICKSTART_WEB.md  README.md  RENDER_DEPLOYMENT.md  REVIEW_BACKEND.md  REVIEW_DEVOPS.md  REVIEW_FRONTEND.md  REVIEW_PRODUCT_UX.md  REVIEW_SECURITY.md  REVIEW_TESTING.md  RIVAFLOW_ACTION_PLAN.md  RIVAFLOW_BETA_READINESS_FINAL.md  RIVAFLOW_REVIEW_REPORT.md  ROADMAP.md  STRIPE_INTEGRATION_SCOPE.md  TEST_FAILURE_REPORT.md  WEB_BUILD_SUMMARY.md  WEB_README.md  WHOOP_INTEGRATION_SCOPE.md  WORK_STATUS.md  apply_migrations.py  build.sh  codecov.yml  docker-compose.prod.yml  docker-compose.yml  fix_lastrowid.py  pyproject.toml  render.yaml  reset_failed_migrations.py  (+4 more)
rivaflow/: .env.example  .gitignore  AUDIT_LOGGING_IMPLEMENTATION.md  BETA_READINESS_FINAL_REPORT.md  BETA_READINESS_REPORT.md  BETA_READINESS_REPORT_V2.md  CHANGELOG.md  CHAT_RUNBOOK.md  COMMITS_READY_FOR_TOMORROW.md  CONTRIBUTING.md  DEPLOY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  ErrorBoundary.tsx.fixed  FUTURE_RELEASES.md  GRAPPLE_COMPLETE.md  INVESTIGATION_REPORT.md  LICENSE  MANIFEST.in  MONITORING_SETUP.md  NEXT_4_STEPS.md  PHASE2_PRODUCTION_READINESS.md  PRODUCTION_FIXES_FEB6.md  PRODUCTION_FIXES_SUMMARY.md  README.md  RENDER_UPGRADE_GUIDE.md  RIVAFLOW_WEB_FIXES.md  SESSION_SUMMARY.md  SOCIAL_FEATURES_STATUS.md  TEST_FAILURE_FIX_PLAN.md  TODO_PERFORMANCE.md  V0.2.0_IMPLEMENTATION_SUMMARY.md  __main__.py  build.sh  cleanup_test_users.py  config.py  create_test_users.py  optimize_logo.py  pyproject.toml  render.yaml  (+2 more)
rivaflow/.github/workflows/: deploy.yml  security.yml
rivaflow/api/: error_handlers.py  main.py
rivaflow/api/middleware/: compression.py  error_handler.py  versioning.py
rivaflow/api/routes/: admin.py  analytics.py  auth.py  chat.py  checkins.py  contacts.py  dashboard.py  feed.py  feedback.py  friends.py  glossary.py  goals.py  gradings.py  grapple.py  gyms.py  llm_tools.py  milestones.py  notifications.py  photos.py  profile.py  readiness.py  reports.py  rest.py  sessions.py  social.py  streaks.py  suggestions.py  techniques.py  videos.py
rivaflow/cli/: app.py
rivaflow/cli/commands/: __init__.py  auth.py  dashboard.py  log.py  progress.py  readiness.py  report.py  rest.py  setup.py  streak.py  suggest.py  technique.py  tomorrow.py  video.py
rivaflow/cli/utils/: error_handler.py  first_run.py  logo.py  user_context.py
rivaflow/config/: tiers.py
rivaflow/core/: auth.py  constants.py  dependencies.py  email_validation.py  error_handling.py  exceptions.py  models.py  pagination.py  rules.py  validation.py
rivaflow/core/middleware/: __init__.py  tier_check.py
rivaflow/core/services/: analytics_service.py  audit_service.py  auth_service.py  contact_service.py  email_service.py  feed_service.py  friend_service.py  friend_suggestions_service.py  glossary_service.py  goals_service.py  grading_service.py  gym_service.py  insight_service.py  milestone_service.py  performance_analytics.py  privacy_service.py  profile_service.py  readiness_analytics.py  readiness_service.py  report_service.py  rest_service.py  session_service.py  social_service.py  streak_analytics.py  streak_service.py  suggestion_engine.py  technique_analytics.py  technique_service.py  tier_access_service.py  user_service.py  video_service.py
rivaflow/core/utils/: cache.py
rivaflow/db/: backfill_scores.py  database.py  migrate.py  seed_glossary.py  update_glossary_videos.py
rivaflow/db/migrations/: 004_add_professor_fields.sql  005_add_name_and_location.sql  007_create_movements_glossary.sql  008_create_contacts.sql  011_add_whoop_stats.sql  012_create_session_techniques.sql  013_add_weight_to_readiness.sql  015_create_movement_videos.sql  018_add_users_table.sql  023_add_missing_current_professor_column.sql  024_add_activity_photos.sql  024_add_activity_photos_pg.sql  025_add_instructor_id_to_profile.sql  026_social_features.sql  027_fix_streaks_unique_constraint.sql  028_password_reset_tokens.sql  029_rename_contacts_to_friends.sql  030_fix_goal_progress_unique_constraint.sql  031_fix_readiness_unique_constraint.sql  032_fix_friends_unique_constraint.sql  034_fix_movements_glossary_custom.sql  035_create_gyms_table.sql  036_add_admin_role.sql  038_set_production_admin.sql  040_add_performance_indexes.sql  044_grapple_foundation_pg.sql  046_social_features_comprehensive_pg.sql  047_add_primary_training_type.sql  048_add_setup_wizard_fields.sql  048_add_setup_wizard_fields_pg.sql  049_app_feedback_system.sql  050_tier_system_enhancements.sql  051_migrate_beta_users.sql  051_migrate_beta_users_pg.sql  052_add_activity_specific_goals.sql  052_add_activity_specific_goals_pg.sql  053_add_gradings_instructor_photo_pg.sql
rivaflow/deployment/: docker-compose-traefik.yml  install-services.sh  nginx-rivaflow.conf  rivaflow-api.service  rivaflow-web.service  setup-traefik.sh
rivaflow/docs/: AGENT_06_PERFORMANCE_REPORT.md  AGENT_09_BUILD_DEPLOYMENT_ASSESSMENT.md  ANALYTICS_ARCHITECTURE.md  API_ENDPOINT_AUDIT.md  API_VERSIONING.md  CLI_BRANDING.md  CLI_HELP_TEXT.md  COLOR_ACCESSIBILITY.md  CONFIGURATION_GUIDE.md  CSRF_PROTECTION.md  DEPENDENCY_AUDIT.md  DEPLOYMENT_SUMMARY_2026-02-05.md  DOCSTRING_STYLE_GUIDE.md  ERROR_MESSAGES.md  FILE_UPLOAD_SECURITY.md  PERFORMANCE_TESTING.md  PROGRESS_INDICATORS.md  README.md  RELEASE_NOTES_FEB_2026.md  SECURITY_AUDIT.md  STREAK_VISUALIZATION.md  STRIPE_INTEGRATION_SCOPE.md  UI_AUDIT_REPORT.md  WHOOP_INTEGRATION_SCOPE.md  WHOOP_REMAINING_BUILD_PLAN.md  api-reference.md  faq.md  fix_sequences_manual.sql  troubleshooting.md  user-guide.md
rivaflow/rivaflow/: config.py  scheduler_main.py
rivaflow/scripts/: cron.example  fix_user_tier.py  manage_admins.py  regenerate_friend_suggestions.py  test_auth.py
rivaflow/tests/: __init__.py  conftest.py  test_color_accessibility.py
rivaflow/web/: index.html  package-lock.json  package.json  vite.config.ts
(+1138 files in other folders)
