[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rivaflow"
version = "0.1.0"
description = "Training OS for the mat — log, analyze, improve"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Ruby Wolff" }
]
keywords = ["bjj", "jiu-jitsu", "training", "fitness", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Other/Nonlisted Topic",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
rivaflow = "rivaflow.cli.app:app"
rivaflow-api = "uvicorn rivaflow.api.main:app"

[project.urls]
Homepage = "https://github.com/yourusername/rivaflow"
Repository = "https://github.com/yourusername/rivaflow"

[tool.hatch.build.targets.wheel]
packages = ["rivaflow"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=rivaflow"
