[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rivaflow"
version = "0.2.0"
description = "Training OS for the mat — log, analyze, improve"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Ruby Wolff" }
]
keywords = ["bjj", "jiu-jitsu", "training", "fitness", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Other/Nonlisted Topic",
]
# All dependencies pinned for reproducible builds and security
dependencies = [
    "typer==0.15.1",
    "rich==13.9.4",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "fastapi==0.128.0",
    "uvicorn[standard]==0.40.0",
    "python-jose[cryptography]==3.5.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.3.0",
    "python-multipart==0.0.22",
    "httpx==0.28.1",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.1.0",
    "email-validator==2.3.0",
    "slowapi==0.1.9",
    "redis==5.2.1",
    "sendgrid==6.11.0",
    "pgvector==0.3.6",
    "cryptography==46.0.4",
    "ecdsa==0.19.1",
    "filetype==1.2.0",
    # AI/ML dependencies REMOVED for v0.2.0 production deployment
    # "groq==0.14.0",
    # "together==1.5.35",
    # "sentence-transformers==3.3.1",
    # "tiktoken==0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "pytest-asyncio==0.25.2",
    "ruff==0.9.1",
    "pip-audit==2.7.3",
]

[project.scripts]
rivaflow = "rivaflow.cli.app:app"

[project.urls]
Homepage = "https://github.com/RubyWolff27/rivaflow"
Repository = "https://github.com/RubyWolff27/rivaflow"

[tool.hatch.build.targets.wheel]
packages = ["rivaflow"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = ["build/"]
# Disable error codes for pre-existing issues; tighten incrementally
disable_error_code = [
    "arg-type",
    "assignment",
    "var-annotated",
    "union-attr",
    "return-value",
    "call-arg",
    "index",
    "list-item",
    "attr-defined",
    "operator",
    "dict-item",
    "misc",
    "no-redef",
    "call-overload",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=rivaflow"
